refactor(port): pets and items on the 1.20.1 API
Attribute modifiers are named by UUID, spawns take the extra NBT argument,
tooltips get a Level, gifts save as plain item NBT, the roster is plain
SavedData, and food is isEdible. A pet crosses dimensions through each
loader's own teleport (Forge's ITeleporter, Fabric's FabricDimensions), as
1.20.1 has no DimensionTransition. Forge 1.20.1 creates the pet job registry
after InitRegistry runs, so its keys are looked up through the platform.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>